fixed flickering issues when zooming the histogram

--- a/htdocs/src/win_showhistogram.css
+++ b/htdocs/src/win_showhistogram.css
@@ -1,3 +1,7 @@
+.chartbg {
+	fill: transparent;
+}
+
 .container {
 	fill: white;
 }
